--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PortoflioWebsite
-@using PortoflioWebsite.Models
+﻿@using PortfolioWebsite
+@using PortfolioWebsite.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
