Add new project

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -189,6 +189,26 @@
             </div>
         </div>
 
+        <!-- Huffman Encoding & Decoding -->
+        <div class="col">
+            <div class="project-card">
+                <h3>Huffman Encoding & Decoding</h3>
+                <p>
+                    A <strong>Windows Forms application</strong> implementing Huffman Coding, an optimal prefix coding algorithm  
+                    used for lossless text compression. Users can encode and decode text files efficiently, visualize character frequency distributions,  
+                    and generate Huffman Trees dynamically.
+                </p>
+                <ul class="text-start">
+                    <li>Developed in <strong>C# .NET Windows Forms</strong>.</li>
+                    <li>Built **Huffman Tree Construction** using <strong>Priority Queues</strong>.</li>
+                    <li>Optimized data compression efficiency while maintaining lossless compression.</li>
+                    <li>Integrated **character frequency analysis** for dynamic Huffman code generation.</li>
+                </ul>
+                <div class="d-flex flex-column gap-2">
+                    <a href="https://github.com/mfortelnyy/HuffmanEnDeCode/tree/main" class="btn btn-outline-light">View on GitHub</a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
