Add Application screenshot

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -204,6 +204,7 @@
                     <li>Optimized data compression efficiency while maintaining lossless compression.</li>
                     <li>Integrated **character frequency analysis** for dynamic Huffman code generation.</li>
                 </ul>
+                <img src="~/images/huffman_encoding.png" class="img-fluid rounded mt-2" alt="Huffman Encoding Screenshot">
                 <div class="d-flex flex-column gap-2">
                     <a href="https://github.com/mfortelnyy/HuffmanEnDeCode/tree/main" class="btn btn-outline-light">View on GitHub</a>
                 </div>
