--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -140,6 +140,13 @@ footer {
   overflow: hidden;
 }
 
+/* Full-Screen Image Modal */
+#imageModal img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
 @media (min-width: 992px) {
   .col-lg-4 {
       padding: 15px;
